[package]
name = "logjuicer-web-service"
description = "A web-service to extract anomaly from log files."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "logjuicer-api"
path = "src/api.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { version = "1", features = ["full"] }
sha2 = { workspace = true }
chrono = { workspace = true }
flate2 = { workspace = true, features = ["zlib"] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

tokio-util = { version = "0", features = ["codec"] }
hyper = "1"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0", features = ["trace", "compression-deflate", "compression-gzip", "fs"] }

http = "1"
base64 = "0"
futures = "0.3"
sqlx = { version = "0", features = ["sqlite", "runtime-tokio", "chrono"] }
threadpool = { workspace = true }
itertools = { workspace = true }
html-builder = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

rustix = { version = "*", features = ["fs"] }
metrics = "*"
metrics-exporter-prometheus = { version = "0", default-features = false }
metrics-process = "1"

logjuicer-report = { path = "../report" }
logjuicer-model = { path = "../model" }

[dev-dependencies]
mockito = { workspace = true }
url = { workspace = true }
zuul-build = { path = "../zuul" }
tempfile = "*"
