[package]
name = "logreduce-web"
version = "0.2.3"
edition = "2021"
license = "Apache-2.0"

[features]
default = ["api_client"]
# Include the full web service client
api_client = []

[dependencies]
# base
console_error_panic_hook = "0.1"
# dominator = "0.5"
# Pull https://github.com/Pauan/rust-dominator/pull/82
dominator = { git = "https://github.com/Pauan/rust-dominator.git", rev = "d40e526843576925c18e57c3c0ee31f1b4c4f789" }
wasm-bindgen = "0.2"
futures-signals = "0.3"

# js
web-sys = { version = "0.3", features = ["Document", "Element", "ScrollIntoViewOptions", "ScrollBehavior", "ScrollLogicalPosition", "HtmlCollection"] }
gloo-console = { version = "0.3" }
gloo-timers = { version = "0.2.1", features = ["futures"] }

# network
wasm-bindgen-futures = "0.4"
gloo-net = "0.4"
futures = "0.3"

# logreduce
logreduce-report = { path = "../report" }
chrono = { workspace = true }
itertools = { workspace = true }
