[package]
name = "logjuicer-web"
description = "The WASM based web client for logjuicer."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["api_client"]
# Include the full web service client
api_client = []

[dependencies]
# base
console_error_panic_hook = "0.1"
dominator = "0.5"
wasm-bindgen = "0.2"
futures-signals = "0.3"

# js
web-sys = { version = "0.3", features = ["Document", "DomRect", "Element", "ScrollIntoViewOptions", "ScrollBehavior", "ScrollLogicalPosition", "HtmlCollection"] }
gloo-console = { version = "0.3" }
gloo-timers = { version = "0.2.1", features = ["futures"] }

# network
wasm-bindgen-futures = "0.4"
gloo-net = "0.4"
futures = "0.3"

# logjuicer
logjuicer-report = { path = "../report" }
chrono = { workspace = true }
itertools = { workspace = true }

flate2 = { version = "1" }
