[package]
name = "zuul-build"
version = "0.1.0"

license = "Apache-2.0"
repository = "https://github.com/logjuicer/logjuicer"
documentation = "https://docs.rs/zuul-build/"
authors = ["TristanCacqueray"]

description = "Decoders for https://zuul-ci.org."

keywords = ["serde", "zuul"]
categories = ["api-bindings", "development-tools"]

edition = "2018"

[lib]
name = "zuul_build"
path = "src/zuul-build.rs"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
url = { workspace = true, features = ["serde"] }
